<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E1E3B9"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C6EDAF11">

        <TextView
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="5"
            android:gravity="center|start"
            android:paddingStart="20dp"
            android:text="@string/edit_task"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ic_done"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:onClick="onClick"
            android:layout_weight="1"
            android:gravity="center|start"
            android:paddingStart="20dp"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:background="@drawable/ic_done"
            tools:ignore="ContentDescription,HardcodedText,RtlSymmetry,ImageContrastCheck" />
    </TableRow>

    <EditText
        android:id="@+id/edt_edit_task"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:gravity="center|start"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:hint="@string/title"
        android:textStyle="bold"
        tools:ignore="LabelFor,VisualLintTextFieldSize" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:gravity="center_vertical"
            android:hint="@string/priority"
            tools:ignore="RtlSymmetry,VisualLintBounds" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp" />

            <RadioButton
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp" />

            <RadioButton
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp" />
        </RadioGroup>

    </TableRow>
</LinearLayout>